--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpeg" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.jpeg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -278,14 +278,12 @@
                 url:"https://script.google.com/macros/s/AKfycbwzyax0XU80aiYEzOKshfJB6piQ_qDqKim6LWUPBGwm9x_w9AnsbcL1N5v4an3ZZDvUIQ/exec",
                 data:$("#submit-form").serialize(),
                 method:"post",
-                success:function (response){
-                  debugger;
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                    //window.location.href="https://google.com"
+                success:function (response){                  
+                    alert("Form submitted successfully");
+                    window.location.reload();                    
                 },
                 error:function (err){
-                    alert("Something Error")
+                    alert("Something Error");
     
                 }
             })
